@@ -18,7 +18,6 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
-import org.apache.commons.lang.StringUtils;
 import org.openhab.binding.digitalstrom.internal.discovery.DiscoveryServiceManager;
 import org.openhab.binding.digitalstrom.internal.handler.BridgeHandler;
 import org.openhab.binding.digitalstrom.internal.handler.CircuitHandler;
@@ -139,8 +138,9 @@ public class DigitalSTROMHandlerFactory extends BaseThingHandlerFactory {
 
     private ThingUID getDeviceUID(ThingTypeUID thingTypeUID, ThingUID thingUID, Configuration configuration,
             ThingUID bridgeUID) {
-        if (thingUID == null && StringUtils.isNotBlank((String) configuration.get(DEVICE_DSID))) {
-            return new ThingUID(thingTypeUID, bridgeUID, configuration.get(DEVICE_DSID).toString());
+        String id = (String) configuration.get(DEVICE_DSID);
+        if (thingUID == null && id != null && !id.isBlank()) {
+            return new ThingUID(thingTypeUID, bridgeUID, id);
         }
         return thingUID;
     }
@@ -208,7 +208,8 @@ public class DigitalSTROMHandlerFactory extends BaseThingHandlerFactory {
             return thingUID;
         }
         String dSID;
-        if (StringUtils.isBlank((String) configuration.get(DS_ID))) {
+        String configValue = (String) configuration.get(DS_ID);
+        if (configValue == null || configValue.isBlank()) {
             dSID = getDSSid(configuration);
             if (dSID != null) {
                 configuration.put(DS_ID, dSID);
@@ -225,13 +226,15 @@ public class DigitalSTROMHandlerFactory extends BaseThingHandlerFactory {
 
     private String getDSSid(Configuration configuration) {
         String dSID = null;
-        if (StringUtils.isNotBlank((String) configuration.get(HOST))) {
-            String host = configuration.get(HOST).toString();
+        String hostConfigValue = (String) configuration.get(HOST);
+        if (hostConfigValue != null && !hostConfigValue.isBlank()) {
+            String host = hostConfigValue;
             String applicationToken = null;
             String user = null;
             String pw = null;
 
-            if (StringUtils.isNotBlank((String) configuration.get(APPLICATION_TOKEN))) {
+            String atConfigValue = (String) configuration.get(APPLICATION_TOKEN);
+            if (atConfigValue != null && !atConfigValue.isBlank()) {
                 applicationToken = configuration.get(APPLICATION_TOKEN).toString();
             }
 
@@ -249,8 +252,9 @@ public class DigitalSTROMHandlerFactory extends BaseThingHandlerFactory {
     }
 
     private boolean checkUserPassword(Configuration configuration) {
-        return StringUtils.isNotBlank((String) configuration.get(USER_NAME))
-                && StringUtils.isNotBlank((String) configuration.get(PASSWORD));
+        String userName = (String) configuration.get(USER_NAME);
+        String password = (String) configuration.get(PASSWORD);
+        return userName != null && !userName.isBlank() && password != null && !password.isBlank();
     }
 
     @Override
