@@ -13,11 +13,9 @@
 package org.openhab.binding.homematic.internal.communicator.parser;
 
 import java.io.IOException;
+import java.util.Objects;
 
-import org.apache.commons.lang.BooleanUtils;
-import org.apache.commons.lang.ObjectUtils;
-import org.apache.commons.lang.StringUtils;
-import org.apache.commons.lang.math.NumberUtils;
+import org.eclipse.jdt.annotation.NonNull;
 import org.openhab.binding.homematic.internal.misc.MiscUtils;
 import org.openhab.binding.homematic.internal.model.HmDatapoint;
 import org.openhab.binding.homematic.internal.model.HmParamsetType;
@@ -38,7 +36,8 @@ public abstract class CommonRpcParser<M, R> implements RpcParser<M, R> {
      * Converts the object to a string.
      */
     protected String toString(Object object) {
-        return StringUtils.trimToNull(ObjectUtils.toString(object));
+        String value = Objects.toString(object, "").trim();
+        return value.isEmpty() ? null : value;
     }
 
     /**
@@ -49,7 +48,7 @@ public abstract class CommonRpcParser<M, R> implements RpcParser<M, R> {
             return (Integer) object;
         }
         try {
-            return Double.valueOf(ObjectUtils.toString(object)).intValue();
+            return Double.valueOf(object.toString()).intValue();
         } catch (NumberFormatException ex) {
             logger.debug("Failed converting {} to a Double", object, ex);
             return null;
@@ -64,7 +63,7 @@ public abstract class CommonRpcParser<M, R> implements RpcParser<M, R> {
             return (Double) object;
         }
         try {
-            return Double.valueOf(ObjectUtils.toString(object));
+            return Double.valueOf(object.toString());
         } catch (NumberFormatException ex) {
             logger.debug("Failed converting {} to a Double", object, ex);
             return null;
@@ -79,7 +78,12 @@ public abstract class CommonRpcParser<M, R> implements RpcParser<M, R> {
             return (Number) object;
         }
         try {
-            return NumberUtils.createNumber(ObjectUtils.toString(object));
+            String value = object.toString();
+            if (value.contains(".")) {
+                return Float.parseFloat(value);
+            } else {
+                return Integer.parseInt(value);
+            }
         } catch (NumberFormatException ex) {
             logger.debug("Failed converting {} to a Number", object, ex);
             return null;
@@ -93,7 +97,7 @@ public abstract class CommonRpcParser<M, R> implements RpcParser<M, R> {
         if (object == null || object instanceof Boolean) {
             return (Boolean) object;
         }
-        return BooleanUtils.toBoolean(ObjectUtils.toString(object));
+        return "true".equals(object.toString().toLowerCase());
     }
 
     /**
@@ -114,9 +118,10 @@ public abstract class CommonRpcParser<M, R> implements RpcParser<M, R> {
     /**
      * Returns the address of a device, replacing group address identifier and illegal characters.
      */
+    @NonNull
     protected String getSanitizedAddress(Object object) {
-        String address = StringUtils.trimToNull(StringUtils.replaceOnce(toString(object), "*", "T-"));
-        return MiscUtils.validateCharacters(address, "Address", "_");
+        String address = Objects.toString(object, "").trim().replaceFirst("\\*", "T-");
+        return MiscUtils.validateCharacters(address.isEmpty() ? null : address, "Address", "_");
     }
 
     /**
@@ -167,8 +172,11 @@ public abstract class CommonRpcParser<M, R> implements RpcParser<M, R> {
         HmDatapoint dp = new HmDatapoint();
         dp.setName(name);
         dp.setDescription(name);
-        dp.setUnit(StringUtils.replace(StringUtils.trimToNull(unit), "\ufffd", "°"));
-        if (dp.getUnit() == null && StringUtils.startsWith(dp.getName(), "RSSI_")) {
+        if (unit != null) {
+            unit = unit.trim().replace("\ufffd", "°");
+        }
+        dp.setUnit(unit == null || unit.isEmpty() ? null : unit);
+        if (dp.getUnit() == null && dp.getName() != null && dp.getName().startsWith("RSSI_")) {
             dp.setUnit("dBm");
         }
 
@@ -210,7 +218,7 @@ public abstract class CommonRpcParser<M, R> implements RpcParser<M, R> {
      * Converts a string value to the type.
      */
     protected Object convertToType(String value) {
-        if (StringUtils.isBlank(value)) {
+        if (value == null || value.isBlank()) {
             return null;
         }
         if (value.equalsIgnoreCase("true") || value.equalsIgnoreCase("on")) {
